templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${VMNAME}
  namespace: vms
  labels:
    app.kubernetes.io/name: ${VMNAME}
    app.kubernetes.io/part-of: kubevirt-migration
spec:
  type: ClusterIP
  selector:
    vm.kubevirt.io/name: ${VMNAME}
  ports:
    - name: http
      port: 11051        # TODO: update per VM
      protocol: TCP
      targetPort: 11051  # TODO: update per VM
